update midterm web for examination

--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
             <div class="inner-logo">
                 <img src="assets/images/logo2-1.png" alt="Logo">
                 <a href="#">
-                    Youtube Video Creator
+                    Channel For Dev
                 </a>
             </div>
             <div class="inner-nav">
                 <ul>
                     <li>
-                        <a href="#">Home</a>
+                        <a href="#section-one">Home</a>
                     </li>
                     <li>
-                        <a href="#">About</a>
+                        <a href="#section-three">About</a>
                     </li>
                     <li>
-                        <a href="#">Episides</a>
+                        <a href="#section-four">Videos</a>
                     </li>
                     <li>
-                        <a href="#">Reviews</a>
+                        <a href="#section-six">Reviews</a>
                     </li>
                     <li>
-                        <a href="#">News</a>
+                        <a href="#section-eight">News</a>
                     </li>
                 </ul>
             </div>
@@ -51,25 +51,25 @@
     <!-- END HEADER  -->
 
     <!-- SECTION ONE  -->
-    <div class="section-one">
+    <div class="section-one" id="section-one">
         <div class="container">
             <div class="inner-wrap">
                 <div class="inner-content">
                     <h1 class="inner-title">
-                        An YouTube <br> Channel for <br> entrepreneurs
+                        An YouTube <br> Channel for <br> Developers
                     </h1>
                     <p class="inner-desc">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Auctor <br> viverra eget sit sapien,
-                        velit scelerisque volutpat vitae.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis numquam officia ea assumenda,
+                        architecto rem explicabo fuga error voluptates dolor porro facere.
                     </p>
                     <div class="inner-button">
-                        <a href="#" class="button-one">Subscribe</a>
-                        <a href="#" class="button-two">Last Video</a>
+                        <a href="https://www.youtube.com/@freecodecamp" class="button-one">Subscribe</a>
+                        <a href="https://www.youtube.com/watch?v=Zv9MsVSxqXo" class="button-two">Last Video</a>
                     </div>
                 </div>
                 <div class="inner-image">
                     <div class="gray">
-                        <img src="assets/images/image1.jpg" alt="">
+                        <img src="assets/images/Free-Code-Camp-1024x557.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -86,22 +86,22 @@
                 </h3>
                 <div class="inner-list">
                     <div class="inner-item">
-                        <a href="https://www.youtube.com/watch?v=jfKfPfyJRdk">
+                        <a href="https://www.youtube.com/@freecodecamp">
                             <img src="assets/images/logo1.png" alt="">
                         </a>
                     </div>
                     <div class="inner-item">
-                        <a href="https://www.twitch.tv/alveussanctuary">
+                        <a href="https://www.twitch.tv/freecodecamp">
                             <img src="assets/images/logo22.png" alt="">
                         </a>
                     </div>
                     <div class="inner-item">
-                        <a href="https://www.facebook.com/ledinhnhuan.142857">
+                        <a href="https://web.facebook.com/freecodecamp">
                             <img src="assets/images/logo3.png" alt="">
                         </a>
                     </div>
                     <div class="inner-item">
-                        <a href="https://www.tiktok.com/explore">
+                        <a href="https://www.tiktok.com/@freecodecamp">
                             <img src="assets/images/logo4.png" alt="">
                         </a>
                     </div>
@@ -112,7 +112,7 @@
     <!-- SECTION TWO  -->
 
     <!-- SECTION THREE  -->
-    <div class="section-three">
+    <div class="section-three" id="section-three">
         <div class="container">
             <div class="inner-wrap">
                 <div class="inner-image">
@@ -123,7 +123,7 @@
                 </div>
                 <div class="inner-content">
                     <h1 class="inner-title">
-                        About the show
+                        About the Channel
                     </h1>
                     <p class="inner-desc">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dignissim arcu cursus tincidunt et odio
@@ -132,16 +132,16 @@
                     </p>
                     <ul>
                         <li>
-                            Created for young entrepreneurs
+                            Created for Programmers
                         </li>
                         <li>
                             New videos every week
                         </li>
                         <li>
-                            Interviews with famous guests
+                            Get guidance from experienced programmers
                         </li>
                     </ul>
-                    <a class="inner-button" href="#">Learn More</a>
+                    <a class="inner-button" href="https://www.freecodecamp.org/">Learn More</a>
                 </div>
             </div>
         </div>
@@ -149,7 +149,7 @@
     <!-- SECTION THREE  -->
 
     <!-- SECTION-FOUR  -->
-    <div class="section-four">
+    <div class="section-four" id="section-four">
         <div class="container">
             <div class="inner-title">
                 Recent Videos
@@ -157,11 +157,11 @@
             <div class="inner-list">
                 <div class="inner-item">
                     <div class="inner-image">
-                        <img src="assets/images/item1.png" alt="">
+                        <img src="assets/images/socket.png" alt="">
                     </div>
                     <div class="inner-content">
                         <h1 class="inner-title">
-                            Video 6: Learn more about marketing
+                            Video 6: Learn more about DevOps + Cloud
                         </h1>
                         <p class="inner-desc">
                             Cras ultricies ligula sed magna dictum porta. Praesent sapien massa, convallis a
@@ -171,7 +171,7 @@
                         <div class="inner-link">
                             <h5 class="link-title">
                                 <i class="fa-solid fa-play"></i>
-                                <a href="https://www.youtube.com/watch?v=O9j9aLo9waY">Watch Now</a>
+                                <a href="https://youtu.be/Zv9MsVSxqXo?si=sMdf32K2_q14Ob79">Watch Now</a>
                             </h5>
                             <h5 class="video-name">Video 06</h5>
                         </div>
@@ -179,11 +179,11 @@
                 </div>
                 <div class="inner-item">
                     <div class="inner-image">
-                        <img src="assets/images/item2.png" alt="">
+                        <img src="assets/images/free-code-camp-pic3.jpg" alt="">
                     </div>
                     <div class="inner-content">
                         <h1 class="inner-title">
-                            Video 5: How to present yourself in social media
+                            Video 5: JavaScript Full Course 2024
                         </h1>
                         <p class="inner-desc">
                             Cras ultricies ligula sed magna dictum porta. Praesent sapien massa, convallis a
@@ -193,7 +193,7 @@
                         <div class="inner-link">
                             <h5 class="link-title">
                                 <i class="fa-solid fa-play"></i>
-                                <a href="https://www.youtube.com/watch?v=br5KZ2G3M38">Watch Now</a>
+                                <a href="https://www.youtube.com/watch?v=jS4aFq5-91M&t">Watch Now</a>
                             </h5>
                             <h5 class="video-name">Video 05</h5>
                         </div>
@@ -201,11 +201,11 @@
                 </div>
                 <div class="inner-item">
                     <div class="inner-image">
-                        <img src="assets/images/item3.png" alt="">
+                        <img src="assets/images/free-code-camp-pic4.jpg" alt="">
                     </div>
                     <div class="inner-content">
                         <h1 class="inner-title">
-                            Video 4: How to get from employee to CEO
+                            Video 4: HTML Full Course For Beginers
                         </h1>
                         <p class="inner-desc">
                             Cras ultricies ligula sed magna dictum porta. Praesent sapien massa, convallis a
@@ -215,7 +215,7 @@
                         <div class="inner-link">
                             <h5 class="link-title">
                                 <i class="fa-solid fa-play"></i>
-                                <a href="https://www.youtube.com/watch?v=5RTbcwKl_RM">Watch Now</a>
+                                <a href="https://www.youtube.com/watch?v=kUMe1FH4CHE">Watch Now</a>
                             </h5>
                             <h5 class="video-name">Video 04</h5>
                         </div>
@@ -223,9 +223,8 @@
                 </div>
             </div>
             <div class="outer-button">
-                <a href="https://www.youtube.com/@vtv24" class="sub-button">Subscribe</a>
-                <a href="https://studio.youtube.com/channel/UCQJEGrmtHFK955_54p9lwlA/videos/upload?d=ud&filter=%5B%5D&sort=%7B%22columnType%22%3A%22date%22%2C%22sortOrder%22%3A%22DESCENDING%22%7D"
-                    class="video-button">Browse Videos</a>
+                <a href="https://www.youtube.com/@freecodecamp" class="sub-button">Subscribe</a>
+                <a href="https://www.youtube.com/@freecodecamp/courses" class="video-button">Browse Videos</a>
             </div>
         </div>
     </div>
@@ -248,7 +247,7 @@
     <!-- SECTION FIVE  -->
 
     <!-- SECTION SIX  -->
-    <div class="section-six">
+    <div class="section-six" id="section-six">
         <div class="container">
             <div class="inner-wrap">
                 <div class="inner-title">
@@ -274,11 +273,11 @@
                                 </div>
                             </div>
                             <div class="inner-comment">
-                                <p> 
+                                <p>
                                     Dignissim enim sit amet venenatis urna cursus eget. Sed viverra tellus in
                                     hac habitasse platea dictumst.
                                 </p>
-                                <h3>Sophie Gordon, <br> Designer</h3>
+                                <h3>Sophie Gordon, <br> Dev</h3>
                             </div>
                         </div>
                     </div>
@@ -297,11 +296,11 @@
                                 </div>
                             </div>
                             <div class="inner-comment">
-                                <p> 
+                                <p>
                                     Dignissim enim sit amet venenatis urna cursus eget. Sed viverra tellus in
                                     hac habitasse platea dictumst.
                                 </p>
-                                <h3>Richard King, <br> ITer</h3>
+                                <h3>Richard King, <br> IT Helper</h3>
                             </div>
                         </div>
                     </div>
@@ -320,11 +319,11 @@
                                 </div>
                             </div>
                             <div class="inner-comment">
-                                <p> 
+                                <p>
                                     Dignissim enim sit amet venenatis urna cursus eget. Sed viverra tellus in
                                     hac habitasse platea dictumst.
                                 </p>
-                                <h3>Joy Shelton, <br> entrepreneur</h3>
+                                <h3>Joy Shelton, <br> SE</h3>
                             </div>
                         </div>
                     </div>
@@ -340,7 +339,7 @@
             <div class="inner-wrap">
                 <div class="inner-content">
                     <h1 class="inner-title">
-                        About the host
+                        About the Administrators
                     </h1>
                     <p class="inner-desc">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dignissim arcu cursus tincidunt et odio
@@ -352,7 +351,7 @@
                         suscipit adipiscing bibendum.
                     </p>
                     <div class="inner-button">
-                        <a href="#" class="sub-button">Subscribe</a>
+                        <a href="https://web.facebook.com/profile.php?id=100074892576866" class="sub-button">Subscribe</a>
                         <a href="#" class="about-button">About the host</a>
                     </div>
                 </div>
@@ -361,10 +360,10 @@
                         <img src="assets/images/host.jpg" alt="Avatar">
                     </div>
                     <h1 class="inner-name">
-                        Nuhan Lee
+                        Hai Long
                     </h1>
                     <p class="inner-position">
-                        Entrepreneur & Creator
+                        Software Engineer & Web Developer
                     </p>
                     <p class="inner-desc">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dignissim arcu cursus tincidunt et odio
@@ -391,7 +390,7 @@
     <!-- Phần cuối cùng của Trần Thịnh -->
 
     <!-- Phần của Phan Tiến  -->
-    <div class="section-eight">
+    <div class="section-eight" id="section-eight">
         <div class="container">
             <div class="inner-wrap">
                 <h1 class="title">
@@ -400,29 +399,31 @@
                 <div class="inner-list">
                     <div class="inner-item">
                         <div class="inner-image">
-                            <img src="assets/images/take1.png" alt="">
+                            <img src="assets/images/article-1.jpg" alt="">
                         </div>
                         <div class="inner-content">
                             <h3 class="time">March 26, 2024</h3>
-                            <h1 class="title">Learn more about marketing and sales</h1>
-                            <p class="inner-desc">Cras ultricies ligula sed magna dictum porta. Praesent sapien massa convallis.</p>
+                            <h1 class="title">AWS Cloud Complete Bootcamp Course</h1>
+                            <p class="inner-desc">Cras ultricies ligula sed magna dictum porta. Praesent sapien massa
+                                convallis.</p>
                             <div class="read-more">
-                                <a href="#">Read More</a>
+                                <a href="https://www.youtube.com/watch?v=zA8guDqfv40">Read More</a>
                                 <p class="inner-tag">Productivity</p>
                             </div>
                         </div>
                     </div>
                     <div class="inner-item">
                         <div class="inner-image">
-                            <img src="assets/images/take2.png" alt="">
+                            <img src="assets/images/article2.jpg" alt="">
                         </div>
                         <div class="inner-content">
                             <h3 class="time">April 28, 2021</h3>
-                            <h1 class="title">How to present yourself in social media</h1>
-                            <p class="inner-desc">Cras ultricies ligula sed magna dictum porta. Praesent sapien massa convallis.</p>
+                            <h1 class="title">Data Structures and Algorithms with Visualizations Full Course (Java)</h1>
+                            <p class="inner-desc">Cras ultricies ligula sed magna dictum porta. Praesent sapien massa
+                                convallis.</p>
                             <div class="read-more">
-                                <a href="#">Read More</a>
-                                <p class="inner-tag">Business</p>
+                                <a href="https://www.youtube.com/watch?v=2ZLl8GAk1X4">Read More</a>
+                                <p class="inner-tag">DSA</p>
                             </div>
                         </div>
                     </div>
@@ -464,7 +465,7 @@
             <div class="inner-wrap">
                 <div class="inner-logo">
                     <img src="assets/images/logo2-1.png" alt="">
-                    <span>CreatorM5</span>
+                    <span>Channel For Dev</span>
                 </div>
                 <div class="inner-desc">
                     <p>
@@ -602,19 +603,19 @@
                         <ul>
                             <li>
                                 <a href="#">
-                                    Video 6: Learn more about marketing and sales
+                                    Video 6: Learn more about DevOps + Cloud
                                 </a>
                             </li>
                             <hr>
                             <li>
                                 <a href="#">
-                                    Video 5: How to present yourself in social media
+                                    Video 5: JavaScript Full Course 2024
                                 </a>
                             </li>
                             <hr>
                             <li>
                                 <a href="#">
-                                    Video 4: How to get from employee to CEO in 7 weeks
+                                    Video 4: HTML Full Course For Beginers
                                 </a>
                             </li>
                         </ul>
